FINALLY fixed the error with strange jumping on new page load (unfortunately, the fix involved commenitng out the focusIn and focusOut events, but maybe only temporarily - they don't add much value though).
While seeking for that error I found out that during playing all the sites except the first are loaded twice (MASSIVE performance hit) because one load comes from the "load" event but before it happens there is load performed because of triggering click event on links in "click" frame handler code. Hacked by preventing default action on all "a" elements except ones with rel="shadowbox" attribute (because image shadowboxing didn't work).

Also, started to work with the user interface. I can already browse the site and generate a playground with custom URL.

--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,47 @@ html, body {
     overflow: hidden;
 }
 
+/* preparation */
+
+#preparation-frame {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+#generate {
+    background: #0096ff;
+    color: #fff;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    text-decoration: none;
+}
+
+#copybox {
+    display: none;
+}
+
+/* playing */
+
+#wrapper {
+    display: none;
+    margin: 0;
+}
+
+#playing-frame {
+    position: absolute !important;
+    left: 0;
+    top: 0;
+    border: none;
+}
+
 #panzoom-layer {
     position: absolute;
     z-index: 10002;
 }
+
+/* recording */
 
 #recordingFrame {
     border: none;
@@ -115,16 +152,6 @@ html, body {
     z-index: 0;
 }
 
-#wrapper {
-    margin: 0;
-}
-
-#playing-frame {
-    border: 1px solid red;
-    position: absolute !important;
-    left: 0;
-    top: 0;
-}
 
 /* ==========================================================================
    Helper classes
